# tino

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-image.yml  typst-update.yml
Dockerfiles/: docs  entrypoint.sh  typarr  typr
confirm/typarr/: __init__.py  app.py  config.py
confirm/typarr/services/: bucket.py  compiler.py
confirm/typarr/static/: index.html  login.html
confirm/typarr/static/css/: styles.css
confirm/typarr/static/js/: api.js  bucket-picker.js  editor-binary.js  editor-collab.js  editor-toolbar.js  panel-resize.js  preview-manager.js  tab-store.js  tree-actions.js  tree-drag.js
confirm/typr/: __init__.py  app.py  auth.py  collab.py  config.py  dependencies.py  gitattributes  middleware.py  models.py
confirm/typr/routers/: buckets.py  collab.py  compile.py  files.py  git.py  templates.py
confirm/typr/services/: bucket.py  compiler.py  file.py  git.py  template.py
confirm/typr/static/: index.html  login.html
confirm/typr/static/css/: styles.css
confirm/typr/static/js/: api.js  app.js  bucket-picker.js  collab.js  constants.js  editor-binary.js  editor-collab.js  (+16 more)
docs/: conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  introduction.rst  support.rst  upgrade.rst  usage.rst  vision.rst
docs/_extras/: CNAME  docker-compose.yml
docs/_static/: custom.css
docs/api/: app.rst  auth.rst  collab.rst  config.rst  mcp.rst  mcp_server.rst  middleware.rst  models.rst  routers.rst  services.rst
docs/development/: architecture.rst  setup.rst
docs/development/adr/: 01-typst.rst  02-no-database.rst  03-git-storage.rst  04-bucket-model.rst  05-fastapi.rst  06-vanilla-js.rst  07-oidc.rst  08-yjs-crdt.rst  09-api-keys.rst  10-mcp.rst
docs/operations/: configuration.rst  deployment.rst  upgrade.rst
docs/usage/: api.rst  authentication.rst  buckets.rst  collaboration.rst  editor.rst  files.rst  fonts.rst  git.rst  mcp.rst  packages.rst  theming.rst
tino/: __init__.py  app.py  auth.py  config.py  dependencies.py  mcp_server.py  middleware.py  models.py  notifier.py
tino/mcp/: __init__.py  instructions.py  server.py
tino/routers/: api_keys.py  buckets.py  collab.py  compile.py  events.py  files.py  fonts.py  git.py  misc.py  search.py  templates.py
tino/services/: api_keys.py  bucket.py  compiler.py  file.py  font.py  git.py  search.py  template.py
tino/static/: index.html  login.html
tino/static/css/: styles.css
tino/static/js/: api-key-manager.js  api.js  app-bindings.js  app.js  bucket-picker.js  codemirror-editor.js  codemirror-entry.js  constants.js  editor-binary.js  editor-collab.js  editor-input.js  editor-manager.js  editor-toolbar.js  file-tree.js  font-manager.js  git-api.js  git-history.js  git-manager.js  panel-resize.js  preview-manager.js  search-modal.js  tab-store.js  template-picker.js  toast.js  tree-actions.js  tree-drag.js  tree-new-menu.js
typarr/: app.py  auth.py  collab.py  config.py  dependencies.py  gitattributes  middleware.py
typarr/routers/: buckets.py  collab.py  compile.py  events.py  files.py  fonts.py  git.py  templates.py
typarr/services/: bucket.py  compiler.py  file.py  font.py  git.py  template.py
typarr/static/: index.html  login.html
typarr/static/css/: styles.css
typarr/static/js/: api.js  app-bindings.js  app.js  bucket-events.js  bucket-picker.js  codemirror-editor.js  codemirror-entry.js  codemirror-typst-tokens.js  codemirror-typst.js  collab.js  constants.js  diff-render.js  editor-binary.js  editor-collab.js  editor-input.js  editor-manager.js  editor-toolbar.js  file-tree.js  font-manager.js  git-history.js  git-manager.js  http-client.js  preview-manager.js  prism-typst.js  template-picker.js
