[project]

name = 'confirm-typr'
description = 'The web-based Typst editor.'
readme = 'README.md'

authors = [
    { name = 'confirm IT' }
]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

dynamic = [
    'version',
]

requires-python = '>=3.14'

dependencies = [
    'anyio==4.13.0',
    'authlib==1.7.2',
    'fastapi==0.136.3',
    'gitpython==3.1.50',
    'gunicorn==26.0.0',
    'httpx==0.28.1',
    'itsdangerous==2.2.0',
    'pycrdt==0.13.1',
    'pycrdt-websocket==0.16.1',
    'python-multipart==0.0.29',
    'pyyaml==6.0.3',
    'uvicorn[standard]==0.48.0',
]


[project.optional-dependencies]

develop = [
    'build',
    'confirm-tools',
    'confirm-sphinx',
    'isort',
    'pycodestyle',
    'pylint',
    'Sphinx',
    'sphinx-autobuild',
]


[build-system]

requires = [
    'setuptools>=65',
    'setuptools_scm[toml]',
    'wheel',
]

build-backend = 'setuptools.build_meta'


[tool.setuptools.packages.find]

include = [
    'confirm.*',
]

exclude = [
    'tests',
    'tests.*',
]

[tool.setuptools.package-data]

'confirm.typr' = [
    'static/**/*',
    'static/*',
]

[tool.setuptools_scm]
