[project]

name = 'tino'
description = 'A collaborative, self-hosted editing platform around Typst.'
readme = 'README.md'

authors = [
    { name = 'confirm IT' }
]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent',
]

dynamic = [
    'version',
]

requires-python = '>=3.14'

dependencies = [
    'anyio==4.13.0',
    'authlib==1.7.2',
    'fastapi==0.136.3',
    'mcp[cli]>=1.27.2',
    'gitpython==3.1.50',
    'gunicorn==26.0.0',
    'httpx==0.28.1',
    'itsdangerous==2.2.0',
    'pycrdt==0.14.0',
    'pycrdt-websocket==0.16.2',
    'python-multipart==0.0.32',
    'pyyaml==6.0.3',
    'uvicorn[standard]==0.49.0',
]


[project.optional-dependencies]

develop = [
    'build',
    'furo',
    'isort',
    'pycodestyle',
    'pylint',
    'Sphinx',
    'sphinx-autobuild',
    'sphinxcontrib-mermaid',
]


[build-system]

requires = [
    'setuptools>=82.0.1',
    'setuptools_scm[toml]',
    'wheel',
]

build-backend = 'setuptools.build_meta'


[tool.setuptools.packages.find]

include = [
    'tino',
    'tino.*',
]

exclude = [
    'tests',
    'tests.*',
]

[tool.setuptools.package-data]

'tino' = [
    'static/**/*',
    'static/*',
]

[tool.setuptools_scm]
